# cpp-ipc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh  package.xml
.github/workflows/: c-cpp.yml
cmake/: cmake_uninstall.cmake.in
demo/linux_service/client/: main.cpp
exec/dzipc_list/: CMakeLists.txt  main.cc
exec/dzipc_topic_cat/: CMakeLists.txt  dzipc_cat.py
exec/dzipc_topic_cat/include/: shm_sniffer.h  socket_sniffer.h
exec/dzipc_topic_cat/src/: shm_sniffer.cc  socket_sniffer.cc
generator/: README.md  batch_msg_srv_generator.py  msg_generator.py  srv_generator.py
include/dzIPC/: define.h  dzipc.h  ipc_info_pool.h  pub_sub_base.h  pub_sub_ipc.h  ser_cli_base.h  ser_cli_ipc.h  server_ipc.h  shm_pub_sub_ipc.h  shm_ser_cli_ipc.h  socket_pub_sub_ipc.h  socket_ser_cli_ipc.h  topic_ipc.h  type.h
include/dzIPC/common/: bs_thread_pool.h  circularqueue.h  data_base.h  data_rev.h  hash.h  name_operator.h  srv_data.h  thread_dispatch.h  topic_data.h
include/ipc_msg/ipc_msg_base/: ipc_msg_base.hpp  udp_id_init_msg.hpp  udp_rtps_ack_msg.hpp
include/ipc_msg/test_messages/: complex_message.hpp
include/ipc_msg/test_msg2/: test_msg.hpp
include/ipc_srv/request_response_test/: request_response_test.hpp
include/libipc/: buffer.h  count_sem.h  debug.h  ipc.h  semaphore.h  sniffer.h  udp.h
log/: latest_list
msg/test_messages/: complex_message.msg
msg/test_msg2/: test_msg.msg
python/: .gitignore  CMakeLists.txt  README.md  dzipc.pyi  ipc_demo.py  pyproject.toml  requirements.txt  setup.py
python/src/: interface.cc
src/: CMakeLists.txt
src/dzIPC/: dzipc.cc  ipc_info_pool.cc  pub_sub_ipc.cc  ser_cli_ipc.cc  server_ipc.cc  shm_pub_sub_ipc.cc  shm_ser_cli_ipc.cc  socket_pub_sub_ipc.cc  socket_ser_cli_ipc.cc  topic_ipc.cc
src/dzIPC/common/: data_rev.cc  hash.cc  name_operator.cc
src/libipc/: ipc.cpp  prod_cons.h  shm.cpp  sniffer.cpp
src/libipc/circ/: elem_array.h
src/libipc/platform/linux/: bpf.c
src/libipc/platform/posix/: semaphore_impl.h  shm_posix.cpp  udp.h
src/libipc/platform/win/: semaphore.h  udp.h
src/libipc/socket/: udp.cpp
src/libipc/sync/: semaphore.cpp
srv/request_response_test/: request_response_test.srv
test/: CMakeLists.txt  test_complex_msg.cpp  test_dzipc.cpp  test_dzipc_larger_data.cpp  test_dzipc_larger_data_shm.cpp  test_dzipc_shm.cpp  test_dzipc_socket.cpp  test_ipc_info_pool.cpp  test_socket.cpp
tools/: README.md  batch_msg_srv_generator.py  msg_generator.py  srv_generator.py
tools/dzipc_topic_list/: CMakeLists.txt  main.cpp
